[tool.poetry]
name = "car-talk-archiver"
version = "1.0.4"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bheinks/car-talk-archiver"
packages = [{include = "cta.py"}]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.2"
feedgen = "^0.9.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
