[tool.poetry]
name = "car-talk-archiver"
version = "1.0.5"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/bheinks/car-talk-archiver"
packages = [{include = "cta.py"}]

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.14.3"
feedgen = "^1.0.0"
requests = "^2.32.5"
lxml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
